fix: fix safari overflow border-radius

--- a/assets/styles/components/circle-button.scss
+++ b/assets/styles/components/circle-button.scss
@@ -11,6 +11,7 @@
   padding: vw(30) vw(58);
   position: relative;
   overflow: hidden;
+  isolation: isolate;
   transition: border-color 0.7s $easing;
 
   * {
@@ -54,6 +55,7 @@
   display: block;
   position: absolute;
   z-index: 1;
+  isolation: isolate;
   width: 100%;
   height: 100%;
   left: 0;
