--- a/assets/styles/components/social.scss
+++ b/assets/styles/components/social.scss
@@ -24,6 +24,7 @@
   height: vw(60);
   width: vw(80);
   transition: border-color 0.5s ease;
+  isolation: isolate;
 
   &::after {
     content: '';
@@ -35,6 +36,7 @@
     left: 0;
     top: 0;
     border-radius: 50%;
+    isolation: isolate;
     background-color: var(--main);
     transition: transform 0.7s $easing, border-radius 0.7s $easing;
     transform: rotate(15deg) translateY(115%);
